log
Thu 28 Mar 2024 07:15:56 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:11: error: unused variable ‘lista’ [-Werror=unused-variable]
   32 |    List * lista = (List *)malloc(sizeof(List));
      |           ^~~~~
cc1: all warnings being treated as errors
Compilation failed
d0cb38c
Thu 28 Mar 2024 07:16:04 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
e2a94a6
Thu 28 Mar 2024 07:18:24 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
61a3346
